# light-controller

./: .gitignore  Cargo.toml  DEVLOG.md  Embed.toml
.cargo/: config.toml
cross/: Cargo.toml
cross/.cargo/: config.toml
cross/app/: Cargo.toml
cross/app/src/: lib.rs  main.rs
cross/board/: Cargo.toml  rust-toolchain.toml
cross/board/src/: lib.rs
lib/: Cargo.toml
lib/src/: lib.rs
src/: lib.rs  main.rs
