[package]
name = "dmng_light_controller"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dmng_light_controller"
test = false
bench = false

[lib]
name = "light_controller"
path = "src/lib.rs"
test = false
bench = false

[target.'cfg(target_arch = "arm")'.dependencies]
control-surface = { path = "../control_surface/" }
embassy-net = { version = "0.6", path = "../embassy/embassy-net/", features = [
  "defmt",
  "tcp",
  "udp",
  "dhcpv4",
] }
embassy-futures = { version = "0.1.1", path = "../embassy/embassy-futures/" }
embassy-stm32 = { version = "0.2.0", features = [
  "chrono",
  "exti",
  "defmt",
  "memory-x",
  "stm32h743zi",
  "unstable-pac",
  "time-driver-tim4",
], path = "../embassy/embassy-stm32/" }
embassy-sync = { version = "0.6.1", features = [
  "defmt",
], path = "../embassy/embassy-sync/" }
embassy-executor = { version = "0.7", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "task-arena-size-32768",
], path = "../embassy/embassy-executor/" }
embassy-time = { version = "0.4.0", features = [
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
], path = "../embassy/embassy-time/" }
embassy-usb = { features = [
  "defmt",
  "max-handler-count-6",
], path = "../embassy/embassy-usb/" }

defmt-rtt = { version = "0.4" }
defmt = { version = "0.3" }

cortex-m = { version = "0.7.7", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
critical-section = "1.1"

[dependencies]
heapless = { version = "0.8", default-features = false }
static_cell = "2"
micromath = "2.0.0"

embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
emballoc = "0.3.0"
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
dasp = { version = "0.11.0", default-features = false, features = [
  "all-no-std",
  "slice",
] }
idsp = "0.17.0"
num-traits = { version = "0.2.19", default-features = false }
p9813 = "0.2.0"

# [patch.crates-io]
# embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "dd4f57677c68fbfd53208154d11def4dc4717de9" }
# embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "dd4f57677c68fbfd53208154d11def4dc4717de9" }
# embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "dd4f57677c68fbfd53208154d11def4dc4717de9" }
# embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "dd4f57677c68fbfd53208154d11def4dc4717de9" }
# embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "dd4f57677c68fbfd53208154d11def4dc4717de9" }
# embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "dd4f57677c68fbfd53208154d11def4dc4717de9" }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# [features]
# defmt = ["dep:defmt"]
# defmt-rtt = ["dep:defmt-rtt"]
# panic-probe = ["dep:panic-probe"]
# default = ["debug"]
# debug = [
#   "defmt",
#   "defmt-rtt",
#   "panic-probe",
#   "embassy-usb/defmt",
#   "embassy-executor/defmt",
#   "embassy-sync/defmt",
#   "embassy-futures/defmt",
#   "embassy-time/defmt",
#   "embassy-time/defmt-timestamp-uptime",
#   "embassy-stm32/defmt",
# ]
