[workspace]
members = ["app"]
resolver = "3"


[workspace.dependencies]
# Embassy
embassy-net = { version = "0.6", features = ["defmt", "tcp", "udp", "dhcpv4"] }
embassy-futures = { version = "0.1.1" }
embassy-stm32 = { version = "0.2.0", features = [
  "chrono",
  "exti",
  "defmt",
  "memory-x",
  "stm32h743zi",
  "unstable-pac",
  "time-driver-tim4",
] }
embassy-sync = { version = "0.6.1", features = ["defmt"] }
embassy-executor = { version = "0.7", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "task-arena-size-32768",
] }
embassy-time = { version = "0.4.0", features = [
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }
embassy-usb = { version = "0.4.0", features = ["defmt", "max-handler-count-6"] }

defmt-rtt = { version = "0.4" }
defmt = { version = "0.3" }

lib = { path = "../lib" }
static_cell = { version = "2.1.0" }


p9813 = "0.2.0"


[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "dd4f57677c68fbfd53208154d11def4dc4717de9" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "dd4f57677c68fbfd53208154d11def4dc4717de9" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "dd4f57677c68fbfd53208154d11def4dc4717de9" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "dd4f57677c68fbfd53208154d11def4dc4717de9" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "dd4f57677c68fbfd53208154d11def4dc4717de9" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "dd4f57677c68fbfd53208154d11def4dc4717de9" }


[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
