[package]
name = "app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "app"
test = false
bench = false
doctest = false
[lib]
name = "board"
path = "src/lib.rs"

[dependencies]
embassy-net = { workspace = true }
embassy-futures = { workspace = true }
embassy-stm32 = { workspace = true }
embassy-sync = { workspace = true }
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embassy-usb = { workspace = true }

defmt-rtt = { workspace = true }
defmt = { workspace = true }
cortex-m = { version = "0.7.7", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
critical-section = "1.1"

heapless = { version = "0.8", default-features = false }
static_cell = { workspace = true }

embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
emballoc = "0.3.0"
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
dasp = { version = "0.11.0", default-features = false, features = [
  "all-no-std",
  "slice",
] }
#idsp = "0.17.0"
#num-traits = { version = "0.2.19", default-features = false }
p9813 = "0.2.0"
lib = { workspace = true }
#micromath = "2.0.0"

# [features]
# defmt = ["dep:defmt"]
# defmt-rtt = ["dep:defmt-rtt"]
# panic-probe = ["dep:panic-probe"]
# default = ["debug"]
# debug = [
#   "defmt",
#   "defmt-rtt",
#   "panic-probe",
#   "embassy-usb/defmt",
#   "embassy-executor/defmt",
#   "embassy-sync/defmt",
#   "embassy-futures/defmt",
#   "embassy-time/defmt",
#   "embassy-time/defmt-timestamp-uptime",
#   "embassy-stm32/defmt",
# ]
